发布基本版本

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12">
-					<div id="fh5co-logo"><a href="index.html">CYBER WORD</a></div>
+					<div id="fh5co-logo"><a href="index">CYBER WORD</a></div>
 				</div>
 			</div>
 		</div>
