完善整个功能模块

--- a/templates/channel.html
+++ b/templates/channel.html
@@ -4,8 +4,11 @@
        <meta charset="utf-8">
    </head>
    <body style="height: 100%; margin: 0">
-       <div id="container" style="height: 100%"></div>
-       <script src="../static/js/jquery.min.js"></script>
+       <div id="container" style="height: 90%"></div>
+       	<div >
+		<button id="scroll_id" onclick="scroll_change()">Stop</button>
+	</div>
+       <script src="/static/js/jquery.min.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-gl/dist/echarts-gl.min.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts-stat/dist/ecStat.min.js"></script>
@@ -13,12 +16,24 @@
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/china.js"></script>
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/map/js/world.js"></script>
        <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=AtlV92RhKRA01xWjET9sdqWyDR9WEqSL&__ec_v__=20190126"></script>
-       
+
        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/extension/bmap.min.js"></script>
 
 
        <script type="text/javascript">
-       
+	var button = document.getElementById("scroll_id");
+	var timerFlag=true;
+	       function scroll_change(){
+			timerFlag=!timerFlag;
+		       if(timerFlag){
+		       
+			       button.innerText="Stop";
+		       }else
+		       {
+
+			       button.innerText="Start";
+		       }
+	       }
 
 var dom = document.getElementById("container");
 var myChart = echarts.init(dom);
@@ -50,7 +65,9 @@ option = null;
     //var data=[["2000-06-05",116],["2000-06-06",129],["2000-06-07",135],["2000-06-08",86],["2000-06-09",73],["2000-06-10",85]]
     myChart.setOption(option = {
         title: {
-            text: 'Beijing AQI'
+            text: 'oscilloscope',
+            subtext: 'Professional oscilloscope leader',
+            left: 'light'
         },
         tooltip: {
             trigger: 'axis'
@@ -72,7 +89,18 @@ option = null;
                     yAxisIndex: 'none'
                 },
                 restore: {},
-                saveAsImage: {}
+                saveAsImage: {},
+                
+                //敲黑板，重点！！！
+            myTool2:{//自定义按钮 danielinbiti,这里增加，selfbuttons可以随便取名字    
+                   show:true,//是否显示    
+                   title:'stop/start', //鼠标移动上去显示的文字    
+                   icon:'path://M525.4 721.2H330.9c-9 0-18.5-7.7-18.5-18.1V311c0-9 9.3-18.1 18.5-18.1h336.6c9.3 0 18.5 9.1 18.5 18.1v232.7c0 6 8.8 12.1 15 12.1 6.2 0 15-6 15-12.1V311c0-25.6-25.3-48.9-50.1-48.9h-335c-26.2 0-50.1 23.3-50.1 48.9v389.1c0 36.3 20 51.5 50.1 51.5h197.6c6.2 0 9.3-7.5 9.3-15.1 0-6-6.2-15.3-12.4-15.3zM378.8 580.6c-6.2 0-12.3 8.6-12.3 14.6s6.2 14.6 12.3 14.6h141.4c6.2 0 12.3-5.8 12.3-13.4 0.3-9.5-6.2-15.9-12.3-15.9H378.8z m251.6-91.2c0-6-6.2-14.6-12.3-14.6H375.7c-6.2 0-12.4 8.6-12.4 14.6s6.2 14.6 12.4 14.6h240.8c6.2 0.1 13.9-8.5 13.9-14.6z m-9.2-120.5H378.8c-6.2 0-12.3 8.6-12.3 14.6s6.2 14.6 12.3 14.6h240.8c7.7 0 13.9-8.6 13.9-14.6s-6.2-14.6-12.3-14.6z m119.4 376.6L709 714.1c9.2-12 14.6-27 14.6-43.2 0-39.4-32.1-71.4-71.8-71.4-39.7 0-71.8 32-71.8 71.4s32.1 71.4 71.8 71.4c16.3 0 31.3-5.4 43.4-14.5l31.6 31.5c3.8 3.8 10 3.8 13.8 0 3.8-3.8 3.8-10 0-13.8z m-88.8-23.6c-28.3 0-51.3-22.8-51.3-51s23-51 51.3-51c28.3 0 51.3 22.8 51.3 51s-23 51-51.3 51z', //图标    
+                  onclick:function() {//点击事件,这里的option1是chart的option信息    
+			  console.log(timerFlag);
+                         }    
+                   }
+
             }
         },
         dataZoom: [{
@@ -166,12 +194,16 @@ option = null;
 if (option && typeof option === "object") {
     myChart.setOption(option, true);
 }
-var channel=0;
+var channel_={{channel}};
 var period=20;
+//var channel_=0;
 //update 
+
 setInterval(function () {
+	if (!timerFlag)
+		return ;
     jQuery.ajax({
-        url: "/getchannel/?channel="+channel+"&period="+period,
+        url: "/getchanneldata/?channel="+channel_+"&period="+period,
         type: "get",
         dataType: "text",
         async: true,
@@ -208,12 +240,13 @@ setInterval(function () {
                 }]
             });
 
-            console.log(data);
+            //console.log(data);
             
         }
     });
 
 }, period);
+
        </script>
    </body>
 </html>
