--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,13 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>May the force be with you!</h1>
-							<h2>愿原力与你同在 <a href="http://sc.chinaz.com/" target="_blank"></a></h2>
+							<!--h2>愿原力与你同在 <a href="http://sc.chinaz.com/" target="_blank"></a></h2-->
+							<dir>   
+								<input type="button" value="CH00" onclick="window.open('channel/0','_blank')">
+								<input type="button" value="CH01" onclick="window.open('channel/1','_blank')">
+								<input type="button" value="CH02" onclick="window.open('channel/2','_blank')">
+								<input type="button" value="CH03" onclick="window.open('channel/3','_blank')">
+							</dir>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<div class="row">
 								<div id="dynamic-display" style="min-width: 310px; height: 400px; margin: 0 auto; margin-bottom="20rem"></div>
