修复消息ID大于x轴坐标问题

--- a/templates/index.html
+++ b/templates/index.html
@@ -70,6 +70,7 @@
 								<input type="button" value="CH01" onclick="window.open('channel/1','_blank')">
 								<input type="button" value="CH02" onclick="window.open('channel/2','_blank')">
 								<input type="button" value="CH03" onclick="window.open('channel/3','_blank')">
+								<input type="button" id="scroll_id" value="Stop" onclick=" scroll_change()">
 							</dir>
 							<div class="simply-countdown simply-countdown-one"></div>
 							<div class="row">
@@ -151,10 +152,10 @@
 			day: d.getDate(),
 			enableUtc: false
 		});
+
 	</script>
 
 	<script type="text/javascript" src="../static/js/echarts-all-3.js"></script>
-<!--	<script type="text/javascript" src="../static/js/drillDown.js"></script>-->
 
 	</body>
 </html>
